--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "jquery": "^3.6.1",
     "popper.js": "^1.16.1",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vue-toast-notification": "^3.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
